Change Newsy to Newsie to match domain

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://newsface.news" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
-title: "Newsy McNewsface" # the name of your site, e.g. ACME Corp.
+title: "Newsie McNewsface" # the name of your site, e.g. ACME Corp.
 collections:
   category:
     output: true
