Authors, author & cat listing pages, new article

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: "Newsie McNewsface" # the name of your site, e.g. ACME Corp.
 collections:
   category:
     output: true
-  author:
+  authors:
     output: true
 plugins: [jekyll-paginate]
 paginate: 48
