--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 url: "https://virtualstyle.github.io/newsface" # the base hostname & protocol for your site, e.g. http://example.com
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/newsface" # the subpath of your site, e.g. /blog
 title: "Newsie McNewsface" # the name of your site, e.g. ACME Corp.
 collections:
   category:
